
* SOLR-13034: Partial (AKA Atomic) updates could encounter "LazyField" instances in the document
  cache and not know hot to deal with them when writing the updated doc to the update log.
  (David Smiley)

* SOLR-15191: Fix JSON Faceting on EnumFieldType if allBuckets, numBuckets or missing is set.
  (Thomas Wöckinger, David Smiley)

* SOLR-15216: Fix for Invalid Reference to data.followers in Admin UI. (Dean Pearce)

* SOLR-15273: Fix NullPointerException in StoredFieldsShardResponseProcessor that happened when a field name alias is
  used for the unique key field in searches with distributed result grouping. (limingnihao via Christine Poerschke)

* SOLR-15384: Zookeeper Status handler /admin/zookeeper/status not queryable from SolrJ (janhoy)

* SOLR-11921: Move "cursorMark" logic from QueryComponent to SearchHandler so it can work with things like QueryElevationComponent
  that modify the SortSpec in prepare(), as well as possible custom "search" components other then QueryComponent.  (hossman)

* SOLR-15317: Correctly handle user principals with whitespace in PKIAuthPlugin (Dominik Dresel, Mike Drob)

* SOLR-15383: Solr Zookeeper status page shows green even when some Zookeepers are not serving requests (janhoy)

* SOLR-11904: Mark ReplicationHandler's polling thread as a Solr server thread so the PKI Interceptor is activated to
  allow PULL replicas to replicate from security-enabled leaders (Timothy Potter, Torsten Bøgh Köster)

* SOLR-15418: The V2 API threw errors for GET requests to collection handlers like /select.
  (David Smiley)

* SOLR-15424: Solr replication UI wraps ETA time on top of next line (janhoy)

* SOLR-15399: IndexFetcher should not issue a local commit for PULL replicas when leader's version is zero (Timothy Potter)

Other Changes
---------------------
* SOLR-15118: Deprecate CollectionAdminRequest.getV2Request(). (Jason Gerlowski)
